<?xml version="1.0"?>
<package>
  <name>gtsam_ros</name>
  <version>0.0.0</version>
  <description>Clones and installs gtsam_ros from https://www.collab.cc.gatech.edu/borg/gtsam.</description>

  <maintainer email="eanelson@eecs.berkeley.edu">Erik Nelson</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
